feat: Refine UI colors and remove unused browser frame state
Updates the background color of the application and contact section to a lighter gray (#c0c0c0) for better contrast. Also removes the unused `isMaximized` and `isMinimized` state from the `BrowserFrame` component as they were not implemented. Adds `color: #000000` to the body and input elements for improved text readability.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #e0e0e0; 
+        background-color: #c0c0c0; 
         overflow-x: hidden;
+        color: #000000;
       }
       /* Custom scrollbar for horizontal tabs */
       .no-scrollbar::-webkit-scrollbar {
