--- a/index.html
+++ b/index.html
@@ -14,6 +14,62 @@
         overflow-x: hidden;
         color: #000000;
       }
+      html {
+        scrollbar-width: thin;
+        scrollbar-color: #c0c0c0 #dfdfdf;
+        overflow-y: scroll;
+      }
+      /* Apply retro scrollbar to body/html */
+      html::-webkit-scrollbar,
+      body::-webkit-scrollbar {
+        width: 16px;
+        height: 16px;
+      }
+      html::-webkit-scrollbar-track,
+      body::-webkit-scrollbar-track {
+        background-color: #dfdfdf;
+        background-image: 
+          linear-gradient(45deg, #ffffff 25%, transparent 25%, transparent 75%, #ffffff 75%), 
+          linear-gradient(45deg, #ffffff 25%, transparent 25%, transparent 75%, #ffffff 75%);
+        background-size: 2px 2px;
+        background-position: 0 0, 1px 1px;
+      }
+      html::-webkit-scrollbar-thumb,
+      body::-webkit-scrollbar-thumb {
+        background-color: #c0c0c0;
+        box-shadow: 
+          inset 1px 1px 0 #ffffff,
+          inset -1px -1px 0 #000000,
+          inset 2px 2px 0 #dfdfdf,
+          inset -2px -2px 0 #808080;
+      }
+      html::-webkit-scrollbar-thumb:active,
+      body::-webkit-scrollbar-thumb:active {
+        background-color: #a0a0a0;
+      }
+      html::-webkit-scrollbar-button:single-button,
+      body::-webkit-scrollbar-button:single-button {
+        display: block;
+        background-color: #c0c0c0;
+        width: 16px;
+        height: 16px;
+        box-shadow: inset 1px 1px 0 #ffffff, inset -1px -1px 0 #000000, inset 2px 2px 0 #dfdfdf, inset -2px -2px 0 #808080;
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+      html::-webkit-scrollbar-button:single-button:active,
+      body::-webkit-scrollbar-button:single-button:active {
+        box-shadow: inset 1px 1px 0 #000000, inset -1px -1px 0 #ffffff;
+        background-position: 50% 60%;
+      }
+      html::-webkit-scrollbar-button:vertical:decrement,
+      body::-webkit-scrollbar-button:vertical:decrement {
+        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='7' height='4' viewBox='0 0 7 4' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.5 0L7 4H0L3.5 0Z' fill='black'/%3E%3C/svg%3E");
+      }
+      html::-webkit-scrollbar-button:vertical:increment,
+      body::-webkit-scrollbar-button:vertical:increment {
+        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='7' height='4' viewBox='0 0 7 4' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.5 4L0 0H7L3.5 4Z' fill='black'/%3E%3C/svg%3E");
+      }
       /* Custom scrollbar for horizontal tabs */
       .no-scrollbar::-webkit-scrollbar {
         display: none;
@@ -117,6 +173,15 @@
         animation: xp-loading 2s linear infinite;
         will-change: transform;
       }
+
+      /* Shimmer Animation for Progressive Loading */
+      @keyframes shimmer {
+        0% { background-position: 200% 0; }
+        100% { background-position: -200% 0; }
+      }
+      .animate-shimmer {
+        animation: shimmer 1.5s ease-in-out infinite;
+      }
     </style>
   <script type="importmap">
 {
@@ -129,6 +194,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
