Update Open Graph and Twitter image URLs to raw

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Rima Mallah | Content Writer">
 <meta property="og:description" content="your neighbourhood gen-z content nerd who overthinks the internet so you don't have to.">
-<meta property="og:image" content="https://github.com/DevanshuSawant/Rima-Mallah-Portfolio-/blob/main/public/thumbnail.png">
+<meta property="og:image" content="https://github.com/DevanshuSawant/Rima-Mallah-Portfolio-/blob/main/public/thumbnail.png?raw=true">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
 <meta property="twitter:url" content="https://rima-mallah-portfolio.vercel.app/">
 <meta name="twitter:title" content="Rima Mallah | Content Writer">
 <meta name="twitter:description" content="your neighbourhood gen-z content nerd who overthinks the internet so you don't have to.">
-<meta name="twitter:image" content="https://github.com/DevanshuSawant/Rima-Mallah-Portfolio-/blob/main/public/thumbnail.png">
+<meta name="twitter:image" content="https://github.com/DevanshuSawant/Rima-Mallah-Portfolio-/blob/main/public/thumbnail.png?raw=true">
 
     
     <title>Rima Mallah | Content Writer</title>
